--- a/summer/pom.xml
+++ b/summer/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.bree</groupId>
-    <artifactId>consumer</artifactId>
+    <artifactId>summer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>consumer</name>
+    <name>summer</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
