--- a/spring/src/main/resources/application.yml
+++ b/spring/src/main/resources/application.yml
@@ -7,3 +7,34 @@ server:
 spring:
   application:
     name: service-api
+#配置数据库连接池
+  datasource:
+    data-username: root
+    data-password: root
+    url: jdbc:mysql://127.0.0.1:3306/data_bree
+    driver-class-name: com.mysql.jdbc.Driver
+    type: com.alibaba.druid.pool.DruidDataSource
+    ###数据源的其他配置
+    initialSize: 5
+    minIdle: 5
+    maxActive: 20
+    maxWait: 60000
+    timeBetweenEvictionRunsMillis: 60000
+    minEvictableIdleTimeMillis: 300000
+    validationQuery: SELECT 1 FROM DUAL
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+    poolPreparedStatements: true
+    ### 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
+    filters: stat,wall,log4j
+    maxPoolPreparedStatementPerConnectionSize: 20
+    useGlobalDataSourceStat: true
+    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
+# 日志的配置
+logging:
+  level.com.bree: debug
+#  file: bree.log
+  path: /spring/log
+
+#数据源配置
